--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,10 @@ h1 {
   border-radius: 8px;
   box-shadow: 0 2px 6px rgba(0,0,0,0.15);
 }
+.box input {
+    width: 80%;
+    margin: 10px 0 10px 0;
+}
 input, button, select {
   padding: 6px;
   margin-top: 6px;
